# django-rq-email-backend

./: .bumpversion.cfg  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  AUTHORS.rst  LICENSE  MANIFEST.in  README.rst  dev-requirements.txt  pyproject.toml  requirements.txt  runtests.py  setup.py  tasks.py  tox.ini
.github/workflows/: ci.yml
django_rq_email/: backends.py
django_rq_email_backend/: backends.py  tasks.py
tests/: settings.py  tests.py
