[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [
    { "name" = "Tom Carrick", "email" = "tom@carrick.eu" },
    { "name" = "Jeff Triplett", "email" = "jeff.triplett@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["django", "django-rq", "rq"]
description = "Provides Django email integration for RQ (Redis Queue)"
license = { "file" = "LICENSE" }
name = "django-rq-email-backend"
readme = "README.rst"
version = "1.0.1"

[project.urls]
Homepage = "https://github.com/knyghty/django-rq-email-backend"
Repository = "https://github.com/knyghty/django-rq-email-backend"

[tool.coverage.run]
branch = true
source = ["."]

[tool.hatch.build.targets.sdist]
exclude = ["/tests", "requirements.txt", "runtests.py"]

[tool.hatch.build.targets.wheel]
packages = ["django_rq_email_backend"]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
ignore = ["ISC001", "S105"]
select = [
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "C90",
    "DJ",
    "E",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FLY",
    "G",
    "I",
    "INP",
    "INT",
    "ISC",
    "N",
    "PERF",
    "PGH",
    "PIE",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLOT",
    "T10",
    "T20",
    "TCH",
    "TRY",
    "UP",
    "W",
    "YTT",
]

[tool.ruff.lint.isort]
force-single-line = true
